# terminal

./: .gitignore  CONFIGURATION_GUIDE.md  DESIGN_PATTERNS.md  DEVELOPMENT_PLAN.md  MODULE_DEVELOPMENT_PLAN.md  README.md  build.gradle.kts  gradlew.bat  install.md  settings.gradle.kts  websocket_test.js
applications/terminal-server/: build.gradle.kts
bounded-contexts/file-transfer/: build.gradle.kts
bounded-contexts/terminal-session/: build.gradle.kts
clients/web-terminal/: index.html  vite.config.ts
clients/web-terminal-v1/: pnpm-lock.yaml
clients/web-terminal-v2/: .gitignore  index.html  package.json  tailwind.config.js  vite.config.ts
gateways/websocket-gateway/: README.md  build.gradle.kts
gradle/: libs.versions.toml
infrastructure/: README.md
infrastructure/configuration/: README.md  build.gradle.kts
infrastructure/event-bus/: README.md  build.gradle.kts
kt-terminal/: .dockerignore  .gitignore  Dockerfile  build.gradle.kts  docker-compose.yml  settings.gradle.kts
kt-terminal-single/: README.md  build.gradle.kts  settings.gradle.kts
kt-terminal-v1/: build.gradle.kts
kt-terminal-v2/: build.gradle.kts  settings.gradle.kts
rs_terminal/: .gitignore  Cargo.toml  application.conf  application.toml  log4rs.yml
rs_terminal/src/: config.rs  http_server.rs  main.rs  protocol.rs  protocol_adapter.rs  session.rs  terminal.rs  terminal_service.rs  websocket.rs  webtransport.rs
rs_terminal/src/protocol/: adapter.rs  mod.rs
rs_terminal/src/pty/: mod.rs  terminal.rs  terminal_service.rs
rs_terminal/src/session/: mod.rs  session.rs
rs_terminal/src/transport/: mod.rs  websocket.rs  webtransport.rs
rs_terminal/src/transport/http/: http_server.rs  mod.rs
rs_terminal/src/transport/websocket/: mod.rs  websocket.rs
rs_terminal/src/transport/webtransport/: mod.rs  webtransport.rs
shared-kernel/: build.gradle.kts
(+362 files in other folders)
