[package]
name = "rs_terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
wtransport = "0.6.1"
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
log = "0.4.22"
env_logger = "0.11.3"
anyhow = "1.0.86"
