[package]
name = "rs_terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
wtransport = "0.6.1"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tungstenite = "0.28.0"
futures-util = "0.3.31"
uuid = { version = "1.18.1", features = ["v4"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
log = "0.4.28"
env_logger = "0.11.8"
log4rs = "1.3.0"
anyhow = "1.0.100"
axum = "0.8.7"
http = "1.4.0"
tower = "0.5.2"
tower-http = { version = "0.5.2", features = ["cors"] }
config = { version = "0.15.0", features = ["json", "toml", "yaml"] }

# Unix-specific dependencies
[target.'cfg(unix)'.dependencies]
tokio-pty-process = "0.4.0"
nix = "0.29.0"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
# Windows ConPTY handling - we'll use the existing tokio process handling
